# intro-to-langsmith

./: fix_remaining.py  migrate_to_bedrock.py  pyproject.toml  requirements.txt  test_bedrock_embed.py  test_rag_build.py
notebooks/module_0/: rag_application.ipynb  utils.py
notebooks/module_1/: alternative_tracing_methods.ipynb  conversational_threads.ipynb  tracing_basics.ipynb  types_of_runs.ipynb  utils.py
notebooks/module_2/: dataset_upload.ipynb  evaluators.ipynb  experiments.ipynb  pairwise_experiments.ipynb  summary_evaluators.ipynb
notebooks/module_3/: prompt_engineering_lifecycle.ipynb  prompt_hub.ipynb
notebooks/module_5/: app.py  filtering.ipynb  online_evaluation.ipynb
